crates/alder-can/src/snapshots/alder_can__module__tests__duplicate_pattern_lambda_args.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = \\x x -> x\n"
---
[
    DuplicatePattern {
        context: LambdaArgs,
        name: "x",
        first: Region {
            start: Position {
                line: 3,
                column: 6,
            },
            end: Position {
                line: 3,
                column: 7,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 8,
            },
            end: Position {
                line: 3,
                column: 9,
            },
        },
    },
]
