crates/alder-can/src/snapshots/alder_can__module__tests__duplicate_type_alias_and_union.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Foo = Int\n\ntype Foo\n    = Bar\n"
---
[
    DuplicateType {
        name: "Foo",
        first: Region {
            start: Position {
                line: 3,
                column: 12,
            },
            end: Position {
                line: 3,
                column: 15,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 6,
            },
            end: Position {
                line: 5,
                column: 9,
            },
        },
    },
]
