crates/alder-can/src/snapshots/alder_can__module__tests__duplicate_value_decl.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nfoo = 1\n\nfoo = 2\n"
---
[
    DuplicateDecl {
        name: "foo",
        first: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 3,
                column: 4,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 4,
            },
        },
    },
]
